[package]
name = "pos"
version = "0.1.0"
authors = ["Asman Mirza <rambo007.am@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.11.4"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"